--- a/maps/sceneview/config.json
+++ b/maps/sceneview/config.json
@@ -19,7 +19,7 @@
   "portalUrl": "https://ugm-gis.maps.arcgis.com",
   "appId": "",
   "authorizedCrossOriginDomains": [],
-  "title": "Test3D ",
+  "title": "Sebaran Sekolah - SceneView WebGIS",
   "subtitle": "oleh Rifki Fauzi",
   "keepAppState": false,
   "logo": "images/app-logo.png",
