--- a/maps/arcgis-online/webappbuilder-coronavirus-indonesia/predefined-apps/default/config.json
+++ b/maps/arcgis-online/webappbuilder-coronavirus-indonesia/predefined-apps/default/config.json
@@ -13,11 +13,11 @@
     ],
     "version": "2.16"
   },
-  "portalUrl": "",
-  "appId": "",
+  "portalUrl": "https://learngis.maps.arcgis.com",
+  "appId": "9d2a5f9eb4cf45d3bca10a0c81996c7a",
   "authorizedCrossOriginDomains": [],
-  "title": "ArcGIS Web Application",
-  "subtitle": "with Web AppBuilder for ArcGIS",
+  "title": "LearnGIS Tutorial Spasialkan.COM",
+  "subtitle": "oleh  Spasialkan.COM",
   "keepAppState": true,
   "logo": "images/app-logo.png",
   "geometryService": "",
